24Jun08=======================================================================
1. Change the route finding algorithm completely. No more recursion. No more
tree searching. It now gives you answers even on a partial cluster map. Oh
and the answers are correct, instead on completely random.
28May08=======================================================================
1. remove "recursion limit" message from Route.pm
28May08=======================================================================
1. Improve the detection of short exact callsigns that are out of prefix area
(eg K7A) (thank you FCC).
2. Improve long line handling on console.pl
3. Add CTY-1805 cty.dat
26May08=======================================================================
1. Put a hard limit on the depth of searching for routes
2. Add CTY-1804 prefix changes
13May08=======================================================================
1. add disc users|nodes|all so that each of these classes can be disconnected
in one command. From a request by Luigi IK5ZUK.
12May08=======================================================================
1. add 'exact' keyword on sh/dx to allow for an exact match to a callsign.
From a request by Robert HB9DZA.
10May08=======================================================================
1. add some privileges to (un)set/bad* and show/bad* commands. Thanks to
Mauro IV3SCP for pointing this out to me.
06May08=======================================================================
1. Finally made the incompatible change of changing DXUser->get* to
DXUser::get*. This will break any third party addons or commands use these
commands.
2. Change version to 1.55
3. Drop the lower limit of 60m to 5100 after Dave G7RAU pointed out usage.
(see http://www.bandplans.com/index.php?band=60)
22Apr08=======================================================================
1. Added two Xmas Is calls.
15Apr08=======================================================================