@@ -1,7 +1,7 @@
 Sov Mil Order of Malta:   15:  28:  EU:   41.90:   -12.40:    -1.0:  1A:
     1A;
 Spratly Is.:              26:  50:  AS:    8.80:  -111.90:    -8.0:  1S:
-    1S,9M0,BV9S,=9M6/LA6VM,=9M6/LA7XK,=9M6/LA9DL,=9M6/N1UR;
+    1S,9M0,BV9S;
 Monaco:                   14:  27:  EU:   43.70:    -7.40:    -1.0:  3A:
     3A;
 Agalega & St. Brandon:    39:  53:  AF:  -10.40:   -56.60:    -4.0:  3B6:
@@ -262,13 +262,12 @@ Turkmenistan:             17:  30:  AS:   38.00:   -58.40:    -5.0:  EZ:
 France:                   14:  27:  EU:   48.80:    -2.30:    -1.0:  F:
     F,HW,HX,HY,TH,TM,TP,TQ,TV,TW;
 Guadeloupe:               08:  11:  NA:   16.00:    61.70:     4.0:  FG:
-    FG,=TO1T,=TO1USB,=TO2ANT,=TO2FG,=TO2OOO,=TO4T,=TO5BG,=TO5C,=TO5G,=TO5GI,
-    =TO5ROM,=TO5S,=TO6T,=TO7ACR,=TO7AES,=TO7DSR,=TO7GAS,=TO7T,=TO8CW,=TO8RR,
-    =TO8S,=TO9T;
+    FG,=TO1T,=TO1USB,=TO2ANT,=TO2FG,=TO4T,=TO5BG,=TO5C,=TO5G,=TO5GI,=TO5S,
+    =TO6T,=TO7T,=TO8RR,=TO8S,=TO9T;
 Mayotte:                  39:  53:  AF:  -13.00:   -45.30:    -3.0:  FH:
-    FH,=TO8MZ,=TX0P,=TX5M,=TX5NK,=TX5T,=TX6A;
-Saint Barthelemy:         08:  11:  NA:   17.90:    62.90:     4.0:  FJ:
-    FJ,=TO5FJ,=TO5RZ;
+    FH,=TX7LX;
+St. Barthelemy:           08:  11:  NA:   17.90:    62.90:     4.0:  FJ:
+    FJ,=TO5DX,=TO5E,=TO5FJ,=TO5RZ;
 New Caledonia:            32:  56:  OC:  -22.30:  -166.50:   -11.0:  FK:
     FK,TX8,=TX1A,=TX3SAM,=TX5CW;
 Chesterfield Is.:         30:  56:  OC:  -19.90:  -158.30:   -11.0:  FK/c:
@@ -313,9 +312,9 @@ Isle of Man:              14:  27:  EU:   54.30:     4.50:     0.0:  GD:
     =GB2MAD,=GB2WB,=GB3GD,=GB4IOM,=GB4MNH,=GB4WXM/P,=GB50UN,=GB5MOB,=GB6SPC;
 Northern Ireland:         14:  27:  EU:   54.60:     5.90:     0.0:  GI:
     2I,2N,GI,GN,MI,MN,=GB0BTC,=GB0BVC,=GB0CI,=GB0CSC,=GB0DDF,=GB0GPF,=GB0MFD,
-    =GB0PSM,=GB0REL,=GB0SHC,=GB0SIC,=GB0SPD,=GB0TCH,=GB0WOA,=GB1SPD,=GB1SRI,
-    =GB2IL,=GB2LL,=GB2MGY,=GB2MRI,=GB2NIC,=GB2NTU,=GB2TCA,=GB3MNI,=GB4CSC,
-    =GB4ES,=GB4SPD,=GB50AAD,=GB5BIG,=GB5BL,=GB5SPD,=GB90SOM;
+    =GB0PSM,=GB0REL,=GB0SHC,=GB0SIC,=GB0SPD,=GB0TCH,=GB0WOA,=GB1AFP,=GB1SPD,
+    =GB1SRI,=GB2IL,=GB2LL,=GB2MGY,=GB2MRI,=GB2NIC,=GB2NTU,=GB2TCA,=GB3MNI,
+    =GB4CSC,=GB4ES,=GB4SPD,=GB50AAD,=GB5BIG,=GB5BL,=GB5SPD,=GB90SOM;
 Jersey:                   14:  27:  EU:   49.30:     2.20:     0.0:  GJ:
     2H,2J,GH,GJ,MH,MJ,=GB0CLR,=GB0GUD,=GB0JSA,=GB0SHL,=GB2BYL,=GB2JSA,=GB4BHF,
     =GB50JSA;
@@ -323,20 +322,20 @@ Scotland:                 14:  27:  EU:   55.80:     4.30:     0.0:  GM:
     2A,2M,2S,GM,GS,MM,MS,=GB0AC,=GB0BNC,=GB0BWT,=GB0DGL,=GB0FFS,=GB0FLA,
     =GB0GDS,=GB0GEI,=GB0GHD,=GB0GKR,=GB0GNE,=GB0HHW,=GB0KGS,=GB0KTC,=GB0LCS,
     =GB0MLM,=GB0MOL,=GB0NHL,=GB0OS,=GB0OYT,=GB0PPE,=GB0QWM,=GB0RBS,=GB0SHP,
-    =GB0SK,=GB0SKY,=GB0SS,=GB0SSF,=GB0TI,=GB100MAS,=GB125BRC,=GB150NRL,
-    =GB1EPC,=GB1FVT,=GB2AGG,=GB2AST,=GB2AYR,=GB2CHG,=GB2DHS,=GB2FBM,=GB2FIO,
-    =GB2FSM,=GB2GNL,=GB2GTM,=GB2HI,=GB2HRH,=GB2HST,=GB2HSW,=GB2IAS,=GB2IGB,
-    =GB2IGS,=GB2IOC,=GB2IOG,=GB2IOT,=GB2JUNO,=GB2KDS,=GB2KHL,=GB2LAY,=GB2LBN,
-    =GB2LCL,=GB2LCP,=GB2LGB,=GB2LHI,=GB2LMG,=GB2LNM,=GB2LO,=GB2LP,=GB2LS,
-    =GB2LSS,=GB2LT,=GB2LTN,=GB2MAS,=GB2MOD,=GB2MOF,=GB2MSL,=GB2MUL,=GB2NAG,
-    =GB2NBC,=GB2NCL,=GB2NEF,=GB2NL,=GB2NTS,=GB2OWM,=GB2OYC,=GB2PBF,=GB2PS,
-    =GB2RB,=GB2RRL,=GB2SKG,=GB2SLH,=GB2SPD,=GB2SSF,=GB2STB,=GB2TDS,=GB2TI,
-    =GB2WBB,=GB3GM,=GB400CA,=GB4AAS,=GB4CGW,=GB4DAS,=GB4GM,=GB4LNM,=GB4NFE,
-    =GB4PMS,=GB4RAF,=GB4SLH,=GB4TSR,=GB4ZBS,=GB50ATC,=GB50JS,=GB50SWL,=GB5AST,
-    =GB5BBS,=GB5CO,=GB5FHC,=GB5OL,=GB5RO,=GB5SI,=GB5TI,=GB60BBC,=GB60CRB,
-    =GB60NTS,=GB6MI,=GB6SA,=GB6SM,=GB6TAA,=GB6WW,=GB700BSB,=GB75GD,=GB75SCP,
-    =GB75STT,=GB8AYR,=GB8CA,=GB8CF,=GB8CI,=GB8CM,=GB8CN,=GB8CO,=GB8CSL,=GB8CY,
-    =GB8FF,=GB8OO,=GB8RU,=GB93AM;
+    =GB0SI,=GB0SK,=GB0SKY,=GB0SS,=GB0SSF,=GB0TI,=GB100MAS,=GB125BRC,=GB150NRL,
+    =GB1EPC,=GB1FVT,=GB2AGG,=GB2AST,=GB2AYR,=GB2CHG,=GB2DHS,=GB2DTM,=GB2FBM,
+    =GB2FIO,=GB2FSM,=GB2GEO,=GB2GNL,=GB2GTM,=GB2HI,=GB2HRH,=GB2HST,=GB2HSW,
+    =GB2IAS,=GB2IGB,=GB2IGS,=GB2IOC,=GB2IOG,=GB2IOT,=GB2JUNO,=GB2KDS,=GB2KHL,
+    =GB2LAY,=GB2LBN,=GB2LCL,=GB2LCP,=GB2LGB,=GB2LHI,=GB2LMG,=GB2LNM,=GB2LO,
+    =GB2LP,=GB2LS,=GB2LSS,=GB2LT,=GB2LTN,=GB2MAS,=GB2MOD,=GB2MOF,=GB2MSL,
+    =GB2MUL,=GB2NAG,=GB2NBC,=GB2NCL,=GB2NEF,=GB2NL,=GB2NTS,=GB2OWM,=GB2OYC,
+    =GB2PBF,=GB2PS,=GB2RB,=GB2RRL,=GB2SKG,=GB2SLH,=GB2SPD,=GB2SSF,=GB2STB,
+    =GB2TDS,=GB2TI,=GB2WBB,=GB3GM,=GB400CA,=GB4AAS,=GB4CGW,=GB4DAS,=GB4GM,
+    =GB4LNM,=GB4NFE,=GB4PMS,=GB4RAF,=GB4SLH,=GB4TSR,=GB4ZBS,=GB50ATC,=GB50JS,
+    =GB50SWL,=GB5AST,=GB5BBS,=GB5CO,=GB5FHC,=GB5OL,=GB5RO,=GB5SI,=GB5TI,
+    =GB60BBC,=GB60CRB,=GB60NTS,=GB6MI,=GB6SA,=GB6SM,=GB6TAA,=GB6WW,=GB700BSB,
+    =GB75GD,=GB75SCP,=GB75STT,=GB8AYR,=GB8CA,=GB8CF,=GB8CI,=GB8CM,=GB8CN,
+    =GB8CO,=GB8CSL,=GB8CY,=GB8FF,=GB8OO,=GB8RU,=GB93AM;
 Shetland:                 14:  27:  EU:   60.40:     1.50:     0.0:  *GM/s:
     GZ,MZ,=2M0ZET,=GB2ELH,=GM0AVR,=GM0CXQ,=GM0CYJ,=GM0DJI,=GM0EKM,=GM0ILB,
     =GM0ULK,=GM1ZNR,=GM3KLA,=GM3WHT,=GM3ZET,=GM3ZNM,=GM4GPP,=GM4GQM,=GM4IPK,
@@ -379,7 +378,7 @@ Colombia:                 09:  12:  SA:    4.60:    74.10:     5.0:  HK:
 San Andres/Providencia:   07:  11:  NA:   12.50:    81.70:     5.0:  HK0/a:
     5J0,5K0,HJ0,HK0;
 Malpelo I.:               09:  12:  SA:    4.00:    81.10:     5.0:  HK0/m:
-    5J0M,5K0M,HJ0M,HK0M,=HK0TU;
+    =HK0TU;
 South Korea:              25:  44:  AS:   37.50:  -127.00:    -9.0:  HL:
     6K,6L,6M,6N,D7,D8,D9,DS,DT,HL;
 North Korea:              25:  44:  AS:   39.00:  -126.00:    -9.0:  HM:
@@ -453,43 +452,43 @@ United States:            05:  08:  NA:   43.00:    87.90:     5.0:  K:
     =K7UP(4)[7],=K7VU(4)[7],=K8AC(5),=K8IA(3)[6],=K8JQ(5),=K8OQL(5),=K8OSF(5),
     =K8XS(5),=K8YC(5),=K9AW(5),=K9ES(5),=K9FY(5),=K9HUY(5),=K9JF(3)[6],
     =K9OM(5),=K9VV(5),=KA2EYH(4),=KA8Q(5),=KB7Q(4)[6],=KC3MR(4),=KC7UP(4)[6],
-    =KD5M(5)[8],=KD5MDO(4)[7],=KE4MBP(4),=KE4OAR(4),=KE7NO(4)[6],=KH2D(5)[8],
-    =KH6DX(3)[6],=KH6GJV(3)[6],=KH6HHS(5)[8],=KH6ILR(5)[8],=KH6OE(4)[8],
-    =KH6QAI(3)[6],=KH6QAJ(3)[6],=KH6RW(3)[6],=KI6DY(4)[7],=KK9A(5),
-    =KL0ET(4)[8],=KL0LN(4)[8],=KL1IF(4)[8],=KL7FDQ(3)[6],=KL7WP(3)[6],
-    =KL7XX(4)[8],=KM4FO(4),=KM6JD(5)[8],=KN4Q(4),=KN4QS(4)[7],=KN5H(3)[6],
-    =KN6RO(5)[8],=KN8J(5),=KO7X(4)[7],=KP2N(5)[8],=KS7T(4)[6],=KU1CW(4)[7],
-    =KU8E(5),=KY1V(4),=KY4AA(4),=KY4Z(4)[7],=N0AX(3)[6],=N1LN(4)[7],
-    =N1SZ(4)[7],=N1WI(4),=N1ZP(4),=N2BJ(4),=N2BJL(5),=N2IC(4)[7],=N2LA(4)[7],
-    =N2NB(3)[6],=N2WN(4),=N3AIU(4)[7],=N3BB(4)[7],=N3ZZ(3)[6],=N4CVO(4),
-    =N4DD(4),=N4DW(4),=N4GK(4),=N4GN(4),=N4IR(4),=N4IRR(5),=N4JF(4),=N4KG(4),
-    =N4KZ(4),=N4NO(4),=N4OGW(4)[8],=N4QS(4),=N4SL(3)[6],=N4TN(4),=N4TZ(4),
-    =N4UW(4),=N4VV(4),=N4XM(4),=N4ZZ(4),=N6AR(5)[8],=N6MW(5)[8],=N6MWA(3)[6],
-    =N6RFM(5)[8],=N6ZO(5)[8],=N6ZZ(4)[7],=N7DC(5)[8],=N7DF(4)[7],=N7FLT(4)[6],
-    =N7IV(4)[7],=N7NG(4)[6],=N7VMR(4)[6],=N8FF(5),=N8II(5),=N8NA(5),=N8PR(5),
-    =N8RA(5),=N8WXQ(5),=N9ADG(3)[6],=NA4K(4),=NA4M(4)[7],=NA4MA(5)[8],
-    =ND2T(3)[6],=ND9M(5),=NH7C(5)[8],=NJ4I(4),=NL7AU(5)[8],=NL7CO(4)[7],
-    =NL7XM(5)[8],=NP3D(5)[8],=NQ4U(4),=NU4B(4),=NU4BP(5),=NW7MT(4)[6],
-    =NW8U(5),=NX9T(5),=NY4N(4),=NY6DX(5)[8],=W0RLI(3)[6],=W0UCE(5)[8],
-    =W0YK(3)[6],=W0YR(5)[8],=W0YRN(4)[7],=W0ZZ(3)[6],=W0ZZQ(4)[7],
-    =W1AA/MSC(5)[8],=W1DY(4)[7],=W1DYH(5)[8],=W1DYJ(5)[8],=W1MVY(3)[6],
-    =W1RH(3)[6],=W1SRD(3)[6],=W2OO(4),=W2VJN(3)[6],=W3CP(3)[6],=W3HDH(4),
-    =W4BCG(4),=W4CID(4),=W4DAN(4),=W4DHE(4),=W4DVG(4),=W4EEH(4),=W4EF(3)[6],
-    =W4FMS(4),=W4GKM(4),=W4HZD(4),=W4JSI(4),=W4KW(4),=W4LC(4),=W4LIA(4),
-    =W4NBS(4),=W4NI(4),=W4NTI(4),=W4NZ(4),=W4PA(4),=W4RYW(4),=W4TDB(4),
-    =W4TYU(4),=W4YOK(4)[7],=W5KI(5)[8],=W5REA(5)[8],=W6AAN(5)[8],=W6DSQ(4)[8],
-    =W6FC(5)[8],=W6IHG(5)[8],=W6JV(5)[8],=W6LFB(4)[7],=W6NWS(5)[8],
-    =W6TER(4)[7],=W6UB(4)[8],=W6XR(5)[8],=W6YJ(4)[7],=W7FG(4)[7],=W7LPF(5)[8],
-    =W7LR(4)[6],=W7LRD(3)[6],=W7QF(5)[8],=W7SE(4)[7],=W8AEF(3)[6],=W8FJ(5),
-    =W8HGH(5),=W8TN(5),=W8WEJ(5),=W8ZA(5),=W9GE(5),=W9GEN(4),=W9IGJ(5),
-    =W9MAK(3)[6],=W9NGA(3)[6],=WA0KDS(3)[6],=WA1FCN(4),=WA1MKE(4),=WA1UJU(4),
-    =WA2MNO(4)[7],=WA4GLH(4),=WA4JA(4),=WA4OSD(4),=WA5VGI(3)[6],=WA8WV(5),
-    =WB2ORD(4),=WB4YDL(4),=WB4ZBI(4),=WB6BWZ(5)[8],=WB8YQJ(3)[6],=WB8YYY(5),
-    =WD4K(4),=WD4OHD(4),=WG7Y(4)[7],=WH0AI(4)[8],=WH6ASW/M(3)[6],=WJ9B(5),
-    =WL7BPY(4)[7],=WL7K(3)[6],=WN4M(4),=WO4O(4),=WO5D(5)[8],=WP4JBG(4)[8],
-    =WS4Y(4)[7],=WT5L(5)[8],=WX4TM(4);
+    =KD5M(5)[8],=KD5MDO(4)[7],=KE4MBP(4),=KE4OAR(4),=KE7NO(4)[6],=KH2AR(4)[8],
+    =KH2D(5)[8],=KH6DX(3)[6],=KH6GJV(3)[6],=KH6HHS(5)[8],=KH6ILR(5)[8],
+    =KH6OE(4)[8],=KH6QAI(3)[6],=KH6QAJ(3)[6],=KH6RW(3)[6],=KI6DY(4)[7],
+    =KK9A(5),=KL0ET(4)[8],=KL0LN(4)[8],=KL1IF(4)[8],=KL7FDQ(3)[6],
+    =KL7WP(3)[6],=KL7XX(4)[8],=KM4FO(4),=KM6JD(5)[8],=KN4Q(4),=KN4QS(4)[7],
+    =KN5H(3)[6],=KN6RO(5)[8],=KN8J(5),=KO7X(4)[7],=KP2N(5)[8],=KS7T(4)[6],
+    =KU1CW(4)[7],=KU8E(5),=KY1V(4),=KY4AA(4),=KY4Z(4)[7],=N0AX(3)[6],
+    =N1LN(4)[7],=N1SZ(4)[7],=N1WI(4),=N1ZP(4),=N2BJ(4),=N2BJL(5),=N2IC(4)[7],
+    =N2LA(4)[7],=N2NB(3)[6],=N2WN(4),=N3AIU(4)[7],=N3BB(4)[7],=N3ZZ(3)[6],
+    =N4CVO(4),=N4DD(4),=N4DW(4),=N4GK(4),=N4GN(4),=N4IR(4),=N4IRR(5),=N4JF(4),
+    =N4KG(4),=N4KZ(4),=N4NO(4),=N4OGW(4)[8],=N4QS(4),=N4SL(3)[6],=N4TN(4),
+    =N4TZ(4),=N4UW(4),=N4VV(4),=N4XM(4),=N4ZZ(4),=N6AR(5)[8],=N6MW(5)[8],
+    =N6MWA(3)[6],=N6RFM(5)[8],=N6ZO(5)[8],=N6ZZ(4)[7],=N7DC(5)[8],=N7DF(4)[7],
+    =N7FLT(4)[6],=N7IV(4)[7],=N7NG(4)[6],=N7VMR(4)[6],=N8FF(5),=N8II(5),
+    =N8NA(5),=N8PR(5),=N8RA(5),=N8WXQ(5),=N9ADG(3)[6],=NA4K(4),=NA4M(4)[7],
+    =NA4MA(5)[8],=ND2T(3)[6],=ND9M(5),=NH7C(5)[8],=NJ4I(4),=NL7AU(5)[8],
+    =NL7CO(4)[7],=NL7XM(5)[8],=NP3D(5)[8],=NQ4U(4),=NU4B(4),=NU4BP(5),
+    =NW7MT(4)[6],=NW8U(5),=NX9T(5),=NY4N(4),=NY6DX(5)[8],=W0RLI(3)[6],
+    =W0UCE(5)[8],=W0YK(3)[6],=W0YR(5)[8],=W0YRN(4)[7],=W0ZZ(3)[6],
+    =W0ZZQ(4)[7],=W1AA/MSC(5)[8],=W1DY(4)[7],=W1DYH(5)[8],=W1DYJ(5)[8],
+    =W1MVY(3)[6],=W1RH(3)[6],=W1SRD(3)[6],=W2OO(4),=W2VJN(3)[6],=W3CP(3)[6],
+    =W3HDH(4),=W4BCG(4),=W4CID(4),=W4DAN(4),=W4DHE(4),=W4DVG(4),=W4EEH(4),
+    =W4EF(3)[6],=W4FMS(4),=W4GKM(4),=W4HZD(4),=W4JSI(4),=W4KW(4),=W4LC(4),
+    =W4LIA(4),=W4NBS(4),=W4NI(4),=W4NTI(4),=W4NZ(4),=W4PA(4),=W4RYW(4),
+    =W4TDB(4),=W4TYU(4),=W4YOK(4)[7],=W5KI(5)[8],=W5REA(5)[8],=W6AAN(5)[8],
+    =W6DSQ(4)[8],=W6FC(5)[8],=W6IHG(5)[8],=W6JV(5)[8],=W6LFB(4)[7],
+    =W6NWS(5)[8],=W6TER(4)[7],=W6UB(4)[8],=W6XR(5)[8],=W6YJ(4)[7],=W7FG(4)[7],
+    =W7LPF(5)[8],=W7LR(4)[6],=W7LRD(3)[6],=W7QF(5)[8],=W7SE(4)[7],
+    =W8AEF(3)[6],=W8FJ(5),=W8HGH(5),=W8TN(5),=W8WEJ(5),=W8ZA(5),=W9GE(5),
+    =W9GEN(4),=W9IGJ(5),=W9MAK(3)[6],=W9NGA(3)[6],=WA0KDS(3)[6],=WA1FCN(4),
+    =WA1MKE(4),=WA1UJU(4),=WA2MNO(4)[7],=WA4GLH(4),=WA4JA(4),=WA4OSD(4),
+    =WA5VGI(3)[6],=WA8WV(5),=WB2ORD(4),=WB4YDL(4),=WB4ZBI(4),=WB6BWZ(5)[8],
+    =WB8YQJ(3)[6],=WB8YYY(5),=WD4K(4),=WD4OHD(4),=WG7Y(4)[7],=WH0AI(4)[8],
+    =WH6ASW/M(3)[6],=WJ9B(5),=WL7BPY(4)[7],=WL7K(3)[6],=WN4M(4),=WO4O(4),
+    =WO5D(5)[8],=WP4JBG(4)[8],=WS4Y(4)[7],=WT5L(5)[8],=WX4TM(4);
 Guantanamo Bay:           08:  11:  NA:   19.90:    75.20:     5.0:  KG4:
-    KG4,KG44;
+    KG4;
 Mariana Is.:              27:  64:  OC:   15.20:  -145.80:   -10.0:  KH0:
     AH0,KH0,NH0,WH0,=KG6SL;
 Baker & Howland Is.:      31:  61:  OC:    0.50:   176.00:    11.0:  KH1:
@@ -746,7 +745,7 @@ Asiatic Russia:           17:  30:  AS:   55.00:   -83.00:    -7.0:  UA9:
     UG9I(18)[31],UG9M(17),UG9S(16),UG9T(16),UG9W(16),UH0,UH7,UH8,UH8T(18)[32],
     UH8V(18)[33],UH9,UH9I(18)[31],UH9M(17),UH9S(16),UH9T(16),UH9W(16),UI0,UI7,UI8,
     UI8T(18)[32],UI8V(18)[33],UI9,UI9I(18)[31],UI9M(17),UI9S(16),UI9T(16),
-    UI9W(16),=R35NP,=R3F/9,=R9HQ(17)[30];
+    UI9W(16),=R150C(19)[33],=R35NP,=R3F/9,=R9HQ(17)[30];
 Uzbekistan:               17:  30:  AS:   41.20:   -69.30:    -5.0:  UK:
     UJ,UK,UL,UM;
 Kazakhstan:               17:  30:  AS:   43.30:   -76.90:    -5.0:  UN:
@@ -784,7 +783,7 @@ Canada:                   05:  09:  NA:   45.00:    80.00:     4.0:  VE:
     =VE2QRZ(2),=VE2RB(2),=VE2TVU(2),=VE2UA(2),=VE2VH(2),=VE2WDX(2),=VE2WT(2),
     =VE2XAA/2(2),=VE2XY(2),=VE2YM(2),=VE2Z(2),=VE2ZC(5),=VE2ZM(5),=VE2ZV(5),
     =VE3EY/2(2),=VE3NE/2(2),=VE3RHJ/2(2),=VE8AJ(2),=VE8PW(2),=VE8RCS(2),
-    =VER20080528,=VY0AA(4)[3],=VY0PW(4)[3],=VY2MGY/3(4)[4];
+    =VER20080623,=VY0AA(4)[3],=VY0PW(4)[3],=VY2MGY/3(4)[4];
 Australia:                30:  59:  OC:  -22.00:  -135.00:   -10.0:  VK:
     AX,VH,VI,VJ,VK,VL,VM,VN,VZ;
 Heard I.:                 39:  68:  AF:  -53.00:   -73.40:    -5.0:  VK0H:
@@ -877,7 +876,7 @@ El Salvador:              07:  11:  NA:   13.70:    89.20:     6.0:  YS:
 Serbia:                   15:  28:  EU:   44.90:   -20.50:    -1.0:  YU:
     4N,YT,YU,YZ;
 Kosova:                   15:  28:  EU:   42.70:   -21.20:    -1.0:  *YU8:
-    =YU8/HB4FG,=YU8/OH2R,=YU8/LZ1BJ;
+    =YU8/CT1FKN,=YU8/HB4FG,=YU8/LZ1BJ,=YU8/OH2R;
 Venezuela:                09:  12:  SA:   10.50:    67.00:     4.5:  YV:
     4M,YV,YW,YX,YY;
 Aves I.:                  08:  11:  NA:   15.70:    63.70:     4.0:  YV0:
