@@ -108,10 +108,8 @@
   '5I' => '279',
   '5J' => '75',
   '5J0' => '77',
-  '5J0M' => '76',
   '5K' => '75',
   '5K0' => '77',
-  '5K0M' => '76',
   '5L' => '39',
   '5M' => '39',
   '5N' => '280',
@@ -288,10 +286,6 @@
   '=8J1RL' => '99,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384,385,386',
   '=9M1CSQ' => '303,529',
   '=9M1CSS' => '303,529',
-  '=9M6/LA6VM' => '261',
-  '=9M6/LA7XK' => '261',
-  '=9M6/LA9DL' => '261',
-  '=9M6/N1UR' => '261',
   '=AA0CY' => '220',
   '=AA3VA' => '220',
   '=AB4EJ' => '220',
@@ -392,6 +386,7 @@
   '=GB0SHC' => '62',
   '=GB0SHL' => '63',
   '=GB0SHP' => '64,353',
+  '=GB0SI' => '64,353',
   '=GB0SIC' => '62',
   '=GB0SK' => '64,353',
   '=GB0SKY' => '64,353',
@@ -418,6 +413,7 @@
   '=GB125BRC' => '64,353',
   '=GB125SR' => '61',
   '=GB150NRL' => '64,353',
+  '=GB1AFP' => '62',
   '=GB1CCC' => '66',
   '=GB1EPC' => '64,353',
   '=GB1FVT' => '64,353',
@@ -439,11 +435,13 @@
   '=GB2CI' => '66',
   '=GB2CPC' => '66',
   '=GB2DHS' => '64,353',
+  '=GB2DTM' => '64,353',
   '=GB2ECG' => '65',
   '=GB2ELH' => '353',
   '=GB2FBM' => '64,353',
   '=GB2FIO' => '64,353',
   '=GB2FSM' => '64,353',
+  '=GB2GEO' => '64,353',
   '=GB2GGM' => '66',
   '=GB2GLS' => '66',
   '=GB2GNL' => '64,353',
@@ -784,6 +782,7 @@
   '=KG6ASO' => '102',
   '=KG6DX' => '102',
   '=KG6SL' => '111',
+  '=KH2AR' => '220',
   '=KH2D' => '220',
   '=KH6DX' => '220',
   '=KH6GJV' => '220',
@@ -1111,6 +1110,7 @@
   '=NY4N' => '220',
   '=NY6DX' => '220',
   '=PE7T/VK9X' => '194',
+  '=R150C' => '176,427,432',
   '=R1ANF' => '208',
   '=R245GS' => '173,420,421,422,423',
   '=R35NP' => '176,427,432',
@@ -1133,7 +1133,6 @@
   '=TO2ANT' => '43',
   '=TO2DX' => '46',
   '=TO2FG' => '43',
-  '=TO2OOO' => '43',
   '=TO3M' => '46',
   '=TO3T' => '46',
   '=TO3W' => '46',
@@ -1146,31 +1145,26 @@
   '=TO5BG' => '43',
   '=TO5C' => '43',
   '=TO5D' => '54',
+  '=TO5DX' => '337',
+  '=TO5E' => '337',
   '=TO5FJ' => '337',
   '=TO5G' => '43',
   '=TO5GI' => '43',
   '=TO5J' => '46',
   '=TO5MM' => '46',
-  '=TO5ROM' => '43',
   '=TO5RZ' => '337',
   '=TO5S' => '43',
   '=TO5T' => '46',
   '=TO5X' => '46',
   '=TO6M' => '46',
   '=TO6T' => '43',
-  '=TO7ACR' => '43',
-  '=TO7AES' => '43',
   '=TO7C' => '59',
-  '=TO7DSR' => '43',
-  '=TO7GAS' => '43',
   '=TO7HAM' => '46',
   '=TO7IR' => '59',
   '=TO7R' => '59',
   '=TO7T' => '43',
   '=TO7X' => '46',
   '=TO8B' => '46',
-  '=TO8CW' => '43',
-  '=TO8MZ' => '44',
   '=TO8RR' => '43',
   '=TO8S' => '43',
   '=TO9A' => '46',
@@ -1179,16 +1173,12 @@
   '=TX0AT' => '330',
   '=TX0C' => '330',
   '=TX0DX' => '330',
-  '=TX0P' => '44',
   '=TX1A' => '45,330',
   '=TX3SAM' => '45,330',
   '=TX4B' => '46',
   '=TX5C' => '48',
   '=TX5CW' => '45,330',
-  '=TX5M' => '44',
-  '=TX5NK' => '44',
-  '=TX5T' => '44',
-  '=TX6A' => '44',
+  '=TX7LX' => '44',
   '=TX9' => '330',
   '=VA2BY' => '191',
   '=VA2CT' => '191',
@@ -1259,7 +1249,7 @@
   '=VE8AJ' => '191',
   '=VE8PW' => '191',
   '=VE8RCS' => '191',
-  '=VER20080528' => '191',
+  '=VER20080623' => '191',
   '=VK0HI' => '199',
   '=VK0IR' => '199',
   '=VK9AA' => '195',
@@ -1382,6 +1372,7 @@
   '=WS4Y' => '220',
   '=WT5L' => '220',
   '=WX4TM' => '220',
+  '=YU8/CT1FKN' => '338',
   '=YU8/HB4FG' => '338',
   '=YU8/LZ1BJ' => '338',
   '=YU8/OH2R' => '338',
@@ -1970,12 +1961,10 @@
   'HI' => '74',
   'HJ' => '75',
   'HJ0' => '77',
-  'HJ0M' => '76',
   'HK' => '75',
   'HK0' => '76,77',
   'HK0/A' => '77',
   'HK0/M' => '76',
-  'HK0M' => '76',
   'HL' => '78',
   'HM' => '317',
   'HN' => '232',
